# todo-rs

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  sonar-project.properties
.github/workflows/: build.yml
database/migrations/: setup.sql  todo.sql  user.sql
src/: domain.rs  infrastructure.rs  main.rs
src/application/: auth.rs
src/application/auth/: dto.rs  error.rs  usecase.rs
src/application/todo/: dto.rs  error.rs  usecase.rs
src/application/user/: dto.rs  error.rs  usecase.rs
src/domain/shared/: error.rs
src/domain/todo/: error.rs  model.rs  repository.rs
src/domain/user/: model.rs  repository.rs
src/infrastructure/: bootstrap.rs  config.rs  configuration.rs
src/infrastructure/database/sqlx/: todo_repository.rs  user_repository.rs
src/infrastructure/security/: jwt.rs  token.rs
src/presentation/: http.rs  restapi.rs
src/presentation/http/: controller.rs  response.rs  router.rs
src/presentation/http/controller/: todo.rs
src/presentation/http/router/: todo.rs
src/presentation/http/todo/: controller.rs  router.rs
src/presentation/http/user/: controller.rs  router.rs
src/presentation/restapi/: middleware.rs  response.rs  swagger.rs
src/presentation/restapi/auth/: controller.rs  router.rs
src/presentation/restapi/todo/: controller.rs  router.rs
src/presentation/restapi/user/: controller.rs  router.rs
